--- a/css/page.css
+++ b/css/page.css
@@ -62,8 +62,8 @@ body {
 
 }
 #about{
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   background-image: url(../back-img.jpg);
 
   float: clear;
@@ -83,8 +83,12 @@ body {
 }
 .aboutme{
   width: 100%;
+  height: 80%;
+  top:115%;
   position: absolute;
   text-align: center;
+  padding-top: 30px;
+  margin-top: 10px;
 }
 .element{
   font-size: 2.85em;
